# datafusion

./: AGENTS.md  Cargo.toml  jobs1.parquet  jobs2.parquet  jobs3.parquet  pyproject.toml  test_array_map.sql
.github/: copilot-instructions.md
datafusion-cli/tests/: cli_integration.rs
datafusion-examples/: Cargo.toml
datafusion-examples/examples/: nested_struct2.rs  test-16228.rs
datafusion/catalog-listing/src/: helpers.rs
datafusion/common/src/utils/: dictionary.rs  mod.rs
datafusion/core/: Cargo.toml
datafusion/core/src/dataframe/: mod.rs  parquet.rs
datafusion/core/tests/: dictionary_null_tests.rs
datafusion/datasource-parquet/src/: opener.rs  source.rs
datafusion/datasource/src/: mod.rs  schema_adapter.rs
datafusion/expr/src/: expr.rs  expr_schema.rs  tree_node.rs  udf.rs  utils.rs
datafusion/functions-aggregate/src/: array_agg.rs  count.rs  first_last.rs  min_max.rs  sum.rs
datafusion/functions-nested/src/: array_map.rs  array_map.rs.new  lib.rs  sum.rs  transform.rs
datafusion/optimizer/src/: common_subexpr_eliminate.rs  lib.rs  limit_push_down.rs  optimizer.rs  push_down_filter.rs
datafusion/optimizer/tests/: optimizer_integration.rs
datafusion/physical-expr-adapter/src/: schema_rewriter.rs
datafusion/physical-expr-common/src/: datum.rs
datafusion/physical-optimizer/src/: filter_pushdown.rs  pruning.rs
datafusion/physical-plan/src/: coalesce_partitions.rs  common.rs  execution_plan.rs  filter_pushdown.rs  filter_pushdown_api.rs  lib.rs  stream.rs
datafusion/physical-planner/src/: operator_optimizer.rs
datafusion/sql/: Cargo.toml
datafusion/sql/src/: query.rs  select.rs  statement.rs
datafusion/sqllogictest/test_files/: array.slt  array_map.slt  describe.slt  describe_case_sensitive.slt  unnest.slt
docs/source/: index.rst
docs/source/contributor-guide/: filter_pushdown_api.md
test-multiple-aggregate/: Cargo.toml
test-multiple-aggregate/src/: main.rs
test-utils/src/: lib.rs
test_parquet/: Cargo.toml  dictionary_decimal.parquet
test_parquet/src/: main.rs
(+52 files in other folders)
