[package]
name = "test-multiple-aggregate"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
