[package]
name = "test_parquet"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
[lints]
workspace = true
