[package]
name = "test_parquet"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
debug_match = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
